k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-classifier
  labels:
    name: image-classifier
    app: scalable-image-classifier
